# drpToolkit

./: CHANGELOG.txt  CITATION.cff  README.md  drpToolkit_conda_env.yml  setup.cfg  setup.py
data/roi/: roi.csv
drpToolkit/: __init__.py  align.py  extract.py  panelize.py  prep.py
drpToolkit_scripts/: align.py  extract.py  panelize.py  prep.py  visualizeGCC.R
examples/: Figure2.R  use_drpToolkit.txt
