[metadata]
name = drpToolkit-JepsonNomad
version = 1.0.0
author = Christian John
author_email = cjohn@ucdavis.edu
description = Digital repeat photography imagery management and analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jepsonnomad/drpToolkit
project_urls =
    Bug Tracker = https://github.com/jepsonnomad/drpToolkit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License 3.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = drpToolkit